--- a/index.html
+++ b/index.html
@@ -8,29 +8,48 @@
 <body>
     <div id="header">
         <div class="div_full bg_white" id="div_search" >
-            <div style="display:table; height: 60 px; width: 100%;" >
-                <div style="display:table-cell; vertical-align:middle; text-align: center; text-transform: uppercase;">
-                    <div id="logo" style="width: 30%;background-color: white; top: 50%; text-align: left;">
-                    		<div style="width: 193px;">
-                       		<svg viewBox="0 0 695 95" y="00" x="0">
+            <div class="table" >
+                <div class="table_cell">
+                    <div id="logo">
+                    		<div class="div_logo">
+                       		<svg viewBox="0 0 695 95" y="00" x="0" height="40" width="193">
 										<path d="M106.4 4.3c19.9 0 32.8 14.7 32.8 36.3 0 21.6-13.2 36.5-32.8 36.5 -19.4 0-32.8-15.4-32.8-36.5C73.6 19.5 87.1 4.3 106.4 4.3zM106.4 72.1c14.2 0 22.1-11.3 22.1-31.6 0-20.1-7.8-31.6-22.1-31.6 -14.2 0-22.1 11.5-22.1 31.1C84.4 60.9 92 72.1 106.4 72.1zM277 39.3c0 22.5-12.7 36.5-34.6 36.5H220.4c0 0 0.5-22.3 0.5-35.3 0-12.8-0.5-35-0.5-35h25.2C266.2 5.5 277 17 277 39.3zM266.5 39.6c0-19.1-8.8-29.9-26-29.9 -7.5 0-10.5 0.5-10.5 0.5s0.7 1.7 0.6 4.5c-0.1 6.1-0.2 17.3-0.2 25.9 0 9.4 0.2 19.5 0.4 25.3 0.1 3.1-0.6 5-0.6 5s2.9 0.5 9.1 0.5C257.4 71.4 266.5 60.1 266.5 39.6zM491.1 4.3c19.8 0 32.8 14.7 32.8 36.3 0 21.6-13.2 36.5-32.8 36.5 -19.4 0-32.8-15.4-32.8-36.5C458.2 19.5 471.7 4.3 491.1 4.3zM491.1 72.1c14.2 0 22.1-11.3 22.1-31.6 0-20.1-7.8-31.6-22.1-31.6 -14.2 0-22.1 11.5-22.1 31.1C469 60.9 476.6 72.1 491.1 72.1zM11.6 51.1c0 16.9 0.7 24.8 0.7 24.8H4.9c0 0 1-28.4 1-55.6 0-4.7-0.2-14.7-0.2-14.7h5.2c0 0 19.6 27.8 32.6 45.9 1.5 2 3.3 5.4 4.7 7.9 0 0-0.6-4.8-0.6-9.1V30.3c0-18-1-24.8-1-24.8h7.3c0 0-1 25.7-1 55.6 0 3 0.2 14.7 0.2 14.7H48.1c0 0-19.2-27.4-32.4-45.7 -2-2.8-3.2-4.7-4.6-7.4 0 0 0.5 6 0.5 9.1V51.1zM309.9 72.1c7.9-0.2 14.1-7.1 12.9-14.7 -0.9-6-5.5-9.6-13.1-14 -9.8-5.6-15.6-9.7-16.5-19 -1.2-11.6 8.5-19.9 20.2-20.4 6.6-0.3 12.6 1.6 14.9 2.3v7.5c0 0-5.6-5.4-14.5-5.4 -6.2 0-12.9 3.9-12.9 10.9 0 6.2 4.8 9.1 13.4 14.1 11.4 6.7 17.1 12.1 17.1 22.1 0 12.5-10.2 21.5-22.5 21.5 -6.6 0-12.9-1.4-14.9-2.3v-8.2C293.9 66.5 299.8 72.4 309.9 72.1zM387.3 5.5v6.6c0 0-5.2-1.7-13.5-1.7h-4.6c0 0 0.2 1.9 0.1 4.5 0 0-0.2 12.6-0.2 16.1 0 19.6 1 44.8 1 44.8h-11c0 0 1-25.2 1-44.8 0-3.5-0.2-16.1-0.2-16.1 0-2.6 0.1-4.5 0.1-4.5h-4.6c-8.3 0-13.5 1.7-13.5 1.7V5.5H387.3zM606 75.8h-10.4c0 0-0.6-25.7-1.6-43.7 -0.1-2.1-0.1-4.9-0.1-7.8 0 0-1.1 3.7-2.7 7.6l-19.3 45.7c0 0-10.8-24.7-19.3-43.2 -1.3-2.8-3-7.7-4.1-10.1 0.2 3.8-0.1 8-0.3 11.1 -1.3 18.1-1.6 40.5-1.6 40.5H539.8l4.4-70.3h6c0 0 13 29.2 21.3 47.1 1 2.2 2.3 4.8 2.9 7.2 0.8-2.7 1.7-4.9 2.6-7.1 7.7-18.1 19.4-47.2 19.4-47.2h6L606 75.8zM443.9 21.9c0 9.3-5.9 15.7-16.2 18.4 6.6 12.3 20.1 35.5 20.1 35.5h-11c0 0-5.9-12-21.1-38.7h1.2c11.3 0 17.1-4.7 17.1-14 0-8.1-4.9-13.2-14.2-13.2 -2.7 0-6.9 0.1-6.9 0.1s0.6 1.6 0.6 6.1v36.2c0 15.7 0.7 23.5 0.7 23.5H403.8c0 0 0.7-27.7 0.7-42.1 0-10-0.7-28.2-0.7-28.2h20.8C437.1 5.5 443.9 11.4 443.9 21.9zM199 21.9c0 9.3-5.9 15.7-16.2 18.4 6.6 12.3 20.1 35.5 20.1 35.5h-11c0 0-5.9-12-21.1-38.7h1.2c11.3 0 17.1-4.7 17.1-14 0-8.1-4.9-13.2-14.2-13.2 -2.7 0-6.9 0.1-6.9 0.1s0.6 1.6 0.6 6.1v36.2c0 15.7 0.7 23.5 0.7 23.5h-10.5c0 0 0.7-27.7 0.7-42.1 0-10-0.7-28.2-0.7-28.2h20.8C192.2 5.5 199 11.4 199 21.9z" fill="#000000"></path>
 									</svg>
                     		</div>
+                    		<div class="div_image">
+									<image src="images/bag.png" />                    		
+                    		</div>
                     </div>
                     <div id="searchBox">
-                        Search Box
+                    		<div class="search_box_cell">
+									<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" 
+										width="40px" height="40px" viewBox="0 0 480 480" style="enable-background:new 0 0 480 480;" xml:space="preserve">
+  										<path d="M370.38,327.999l-41.203-41.203c-7.585-7.595-18.232-10.255-27.97-7.992l-15.386-15.367
+  											c12.34-16.901,19.63-37.726,19.63-60.257c0.007-56.492-45.805-102.289-102.305-102.289S100.849,146.688,100.849,203.18
+  											c0,56.508,45.798,102.305,102.298,102.305c22.603,0,43.492-7.338,60.425-19.753l15.307,15.296
+  											c-2.32,9.772,0.328,20.479,7.955,28.104l41.211,41.211c11.703,11.688,30.633,11.688,42.336,0
+  											C382.075,358.641,382.075,339.688,370.38,327.999z M203.114,273.983c-39.117,0-70.828-31.703-70.828-70.828
+  											c0-39.117,31.711-70.82,70.828-70.82c39.102,0,70.828,31.72,70.828,70.82C273.943,242.272,242.216,273.983,203.114,273.983z"/>
+									</svg>
+                    		</div>
+                        <div class="search_box_cell">
+									<input type="text" value="Search by keyword or item#" class="text_box">                        
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="div_full bg_black" id="div_ad">
-            <div style="display:table; height: 35px; width: 100%;" >
-                <div style="display:table-cell; vertical-align:middle; text-align: center; text-transform: uppercase;">
+            <div class="table" >
+                <div class="table_cell">
                     Free shipping. Free returns. All the time. <a href="#" class="white_link"> (see details)</a>
                 </div>
             </div>
         </div>
         
+    </div>
+    <div class="txt">
+		    
     </div>
 </body>
 </html>
